--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #efefef;
+      background-color: #000;
+      background-image: url( 'http://farm1.static.flickr.com/191/466270177_a7b3dae153.jpg' );
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #888;
+      color: #FFF;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #000; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: #EEE; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #000; }
-    h3 { text-align: center; color: #000; }
-    a { color: #000; }
+    h2 { font-size: 1.5em; color: #EEE; }
+    h3 { text-align: center; color: #EEE; }
+    a { color: #EEE; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
+    pre { background: #EEE; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
