--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body {
       margin-top: 1.0em;
       background-color: #000;
-      background-image: url( 'http://farm1.static.flickr.com/191/466270177_a7b3dae153.jpg' );
+      background-image: url( 'http://www.beautys.de/d/9148-1/art+foto+horse+moon+moon+night+sky+seemingly+fantastic+visual+wallpaper+background+image.jpg' );
+      background-repeat: no-repeat;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #FFF;
     }
