--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background-color: #000;
       background-image: url( 'http://www.beautys.de/d/9148-1/art+foto+horse+moon+moon+night+sky+seemingly+fantastic+visual+wallpaper+background+image.jpg' );
       background-repeat: no-repeat;
+      background-position: right;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #FFF;
     }
