--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="https://github.com/missinglink/Insomnia">Insomnia</a>
+    <h1><a href="https://github.com/missinglink/Insomnia">Insomnia</a></h1>
 
     <div class="description">
       Insomnia - PHP 5.3 MVC framework for creating RESTful web services, built on Doctrine2 components
