--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     a { color: #EEE; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #EEE; color: #fff; padding: 15px;}
+    pre { background: #333; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
